@@ -33,6 +33,6 @@ describe RubyWarrior::Abilities::Base do
   it "should raise an exception if direction isn't recognized" do
     lambda {
       @ability.verify_direction(:foo)
-    }.should raise_error("Unknown direction \"foo\". Should be :forward, :backward, :left or :right.")
+    }.should raise_error("Unknown direction :foo. Should be :forward, :backward, :left or :right.")
   end
 end
